--- a/css/style.css
+++ b/css/style.css
@@ -572,8 +572,7 @@ video {
   margin-bottom: 0.5rem;
 }
 
-.my-3 {
-  margin-top: 0.75rem;
+.mb-3 {
   margin-bottom: 0.75rem;
 }
 
@@ -605,10 +604,6 @@ video {
   margin-top: 2rem;
 }
 
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
-
 .inline-block {
   display: inline-block;
 }
@@ -623,6 +618,10 @@ video {
 
 .hidden {
   display: none;
+}
+
+.h-full {
+  height: 100%;
 }
 
 .min-h-screen {
@@ -737,16 +736,6 @@ video {
   background-color: rgb(254 249 195 / var(--tw-bg-opacity));
 }
 
-.bg-teal-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(19 78 74 / var(--tw-bg-opacity));
-}
-
-.\!bg-teal-900 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(19 78 74 / var(--tw-bg-opacity)) !important;
-}
-
 .p-4 {
   padding: 1rem;
 }
@@ -824,10 +813,6 @@ video {
   font-weight: 600;
 }
 
-.italic {
-  font-style: italic;
-}
-
 .text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
@@ -888,6 +873,10 @@ video {
 }
 
 @media print {
+  .print\:mt-2 {
+    margin-top: 0.5rem;
+  }
+
   .print\:mt-4 {
     margin-top: 1rem;
   }
@@ -904,7 +893,11 @@ video {
     height: 100%;
   }
 
-  .print\:items-stretch {
-    align-items: stretch;
+  .print\:h-screen {
+    height: 100vh;
+  }
+
+  .print\:pt-2 {
+    padding-top: 0.5rem;
   }
 }
