--- a/css/style.css
+++ b/css/style.css
@@ -572,6 +572,16 @@ video {
   margin-bottom: 0.5rem;
 }
 
+.my-3 {
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+}
+
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .mb-3 {
   margin-bottom: 0.75rem;
 }
@@ -873,12 +883,26 @@ video {
 }
 
 @media print {
+  .print\:my-2 {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+
+  .print\:my-3 {
+    margin-top: 0.75rem;
+    margin-bottom: 0.75rem;
+  }
+
   .print\:mt-2 {
     margin-top: 0.5rem;
   }
 
   .print\:mt-4 {
     margin-top: 1rem;
+  }
+
+  .print\:mt-3 {
+    margin-top: 0.75rem;
   }
 
   .print\:block {
