--- a/css/style.css
+++ b/css/style.css
@@ -562,6 +562,22 @@ video {
   position: fixed;
 }
 
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.-right-4 {
+  right: -1rem;
+}
+
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
@@ -643,6 +659,10 @@ video {
   height: 100%;
 }
 
+.h-3 {
+  height: 0.75rem;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
@@ -659,6 +679,19 @@ video {
   width: 80%;
 }
 
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.w-3 {
+  width: 0.75rem;
+}
+
 .flex-shrink-0 {
   flex-shrink: 0;
 }
@@ -669,6 +702,17 @@ video {
 
 .basis-full {
   flex-basis: 100%;
+}
+
+@keyframes ping {
+  75%, 100% {
+    transform: scale(2);
+    opacity: 0;
+  }
+}
+
+.animate-ping {
+  animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
 }
 
 .list-disc {
@@ -735,6 +779,19 @@ video {
   border-radius: 0.5rem;
 }
 
+.border-2 {
+  border-width: 2px;
+}
+
+.border-b-2 {
+  border-bottom-width: 2px;
+}
+
+.border-b-black {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
 .bg-blue-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(37 99 235 / var(--tw-bg-opacity));
@@ -753,6 +810,16 @@ video {
 .bg-yellow-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(254 249 195 / var(--tw-bg-opacity));
+}
+
+.bg-sky-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(56 189 248 / var(--tw-bg-opacity));
+}
+
+.bg-sky-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(14 165 233 / var(--tw-bg-opacity));
 }
 
 .p-4 {
@@ -789,6 +856,10 @@ video {
 
 .pt-4 {
   padding-top: 1rem;
+}
+
+.pe-1 {
+  padding-inline-end: 0.25rem;
 }
 
 .text-center {
@@ -859,6 +930,14 @@ video {
 .text-yellow-700 {
   --tw-text-opacity: 1;
   color: rgb(161 98 7 / var(--tw-text-opacity));
+}
+
+.underline {
+  text-decoration-line: underline;
+}
+
+.opacity-75 {
+  opacity: 0.75;
 }
 
 .shadow-\[0_4px_10px_0_rgba\(0\2c 0\2c 0\2c 0\.2\)\2c 0_4px_20px_0_rgba\(0\2c 0\2c 0\2c 0\.19\)\] {
@@ -939,7 +1018,15 @@ video {
     height: 100vh;
   }
 
+  .print\:border-b-0 {
+    border-bottom-width: 0px;
+  }
+
   .print\:pt-2 {
     padding-top: 0.5rem;
+  }
+
+  .print\:no-underline {
+    text-decoration-line: none;
   }
 }
