Updated CSS files

--- a/css/style.css
+++ b/css/style.css
@@ -947,6 +947,16 @@ video {
   color: rgb(161 98 7 / var(--tw-text-opacity));
 }
 
+.text-yellow-500 {
+  --tw-text-opacity: 1;
+  color: rgb(234 179 8 / var(--tw-text-opacity));
+}
+
+.text-yellow-600 {
+  --tw-text-opacity: 1;
+  color: rgb(202 138 4 / var(--tw-text-opacity));
+}
+
 .opacity-75 {
   opacity: 0.75;
 }
