Updated CSS for printing on other browsers
This workarounds the header and footer added by other browsers when printing.

--- a/css/input-tailwind.css
+++ b/css/input-tailwind.css
@@ -11,7 +11,17 @@
   body {
     margin-top: 5px;
     margin-left: 10px;
-    zoom: 71%;
+    zoom: 70%;
     transform-origin: 0 0;
+  }
+  @page {
+    size: auto;
+    margin: 0;
+  }
+  @page :footer {
+    display: none;
+  }
+  @page :header {
+    display: none;
   }
 }
